View Issue Details

IDProjectCategoryView StatusLast Update
0025531Open CASCADEOCCT:Modeling Algorithmspublic2015-05-14 15:32
ReporternbvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformLinuxOSDebian 6.0 
Target Version6.9.0Fixed in Version6.9.0 
Summary0025531: Difference in intersection result on Windows and Linux platform is very significant
DescriptionAfter the fix for bug #0025465 we have obtained regression in test case bugs modalg_5(010) bug25292_32 only on Linux platform.
Steps To Reproduce(test bugs modalg_5(010) bug25292_32)

restore [locate_data_file bug25292_f1.brep] f1
restore [locate_data_file bug25292_f2.brep] f2
bopcurves f2 f1 -2d

#################################################
#On Windows:
Tolerance Reached=0.00029752448310915725

#On Linux:
Tolerance Reached=0.00030111084461203422

Delta=0.00030111084461203422-0.00029752448310915725=3.58636150287697e-6
TagsNo tags attached.
Test case numberbugs modalg_5(010) bug25292_32

Activities

git

2014-12-10 11:29

administrator   ~0035250

Branch CR25531 has been created by nbv.

SHA-1: ea615bb51386610b382491cffcf3a68fbd4214c4


Detailed log of new commits:

Author: nbv
Date: Wed Dec 10 11:28:25 2014 +0300

    0025531: Difference in intersection result on Windows and Linux platform is very significant
    
    1. Dump of WLine is shown with more precise.
    2. Equation solving with more precise.

Author: nbv
Date: Mon Dec 1 12:22:12 2014 +0300

    0025531: Difference in intersection result on Windows and Linux platform is very significant

git

2014-12-10 12:42

administrator   ~0035252

Branch CR25531 has been updated forcibly by nbv.

SHA-1: 0eac6174adfd56f4380ddacaeb4411821965f0cd

git

2014-12-10 13:49

administrator   ~0035260

Branch CR25531 has been updated forcibly by nbv.

SHA-1: 6852cffc11e8bb35a3c5f87b2de1b827aae6f57c

git

2014-12-10 16:53

administrator   ~0035275

Branch CR25531 has been updated by nbv.

SHA-1: 15e1805048a45d79bcf1a434bbd96684f601ca7a


Detailed log of new commits:

Author: nbv
Date: Wed Dec 10 16:52:45 2014 +0300

    Code optimization.

git

2014-12-11 10:28

administrator   ~0035301

Branch CR25531 has been updated by nbv.

SHA-1: 5fccefa6f09d74f35c798987ba76ed285254b2e5


Detailed log of new commits:

Author: nbv
Date: Thu Dec 11 10:26:07 2014 +0300

    Determinant

git

2014-12-12 11:38

administrator   ~0035351

Branch CR25531 has been updated forcibly by nbv.

SHA-1: 971e60fc70f48886b7a2119bfad91061bd6e5652

git

2014-12-12 16:13

administrator   ~0035370

Branch CR25531 has been updated forcibly by nbv.

SHA-1: b85481b55409a53339d33f2ff8c6b8448e8316d2

nbv

2014-12-12 17:09

developer   ~0035376

Dear Igor.

Please review branch CR25531.

ifv

2014-12-12 17:49

developer   ~0035377

Ok

git

2014-12-12 18:30

administrator   ~0035379

Branch CR25531 has been updated forcibly by nbv.

SHA-1: 0e5c701b81894de3c54e6ebbb8f97731ffc77bc5

nbv

2014-12-12 18:31

developer   ~0035380

All commits were squashed.

git

2014-12-16 16:38

administrator   ~0035422

Branch CR25531 has been updated forcibly by mkv.

SHA-1: a57cf44e70457d5a416bd42d890dbc8fe8f33092

mkv

2014-12-22 15:08

tester   ~0035556

Dear BugMaster,
Branch CR25531 was rebased on current master of occt git-repository.

mkv

2014-12-22 15:09

tester   ~0035557

Dear BugMaster,
Branch CR25531 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: a57cf44e70457d5a416bd42d890dbc8fe8f33092

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 0 (0 on master)

products component :
Linux: 11 (11 on master)
Windows: 1 (1 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
http://occt-tests.nnov.opencascade.com/CR25531-master-occt/Debian60-64/bugs/modalg_5/bug25292_32.html
http://occt-tests.nnov.opencascade.com/CR25531-master-occt/Windows-32-VC10/bugs/modalg_5/bug25292_32.html
bugs modalg_5(010) bug25292_32: OK

Testing on Linux:
occt component :
Total MEMORY difference: 367840712 / 367902964
Total CPU difference: 50958.54999999982 / 51486.36000000016
products component :
Total MEMORY difference: 112365872 / 112410984
Total CPU difference: 17022.319999999934 / 16866.12999999998

Testing on Windows:
occt component :
Total MEMORY difference: 277688160 / 277277864
Total CPU difference: 37287.546875 / 37472.0935757
products component :
Total MEMORY difference: 72370668 / 71352468
Total CPU difference: 13329.953125 / 10337.547159399997

There are following differences in images found by testdiff.
http://occt-tests.nnov.opencascade.com/CR25531-master-occt/Debian60-64/diff-Debian60-64.html
http://occt-tests.nnov.opencascade.com/CR25531-master-occt/Windows-32-VC10/diff-Windows-32-VC10.html
IMAGE bugs modalg_5 bug25292_32: bug25292_32.png differs
IMAGE bugs modalg_5 bug25292_31: bug25292_31.png differs
IMAGE bugs modalg_1 bug16517_1: bug16517_1.png differs
IMAGE bugs modalg_1 bug16517_2: bug16517_2.png differs

nbv

2014-12-22 17:58

developer   ~0035567

Last edited: 2014-12-22 18:16

Dear Mikhail!

Images in bugs modalg_5 testgrids are OK. Only direction of the line was changed.

Test scripts bugs modalg_1 bug16517_1(2) are wrong (test result is OK). In my point of view, both p_1 and p_2 wires must be checked. At that, result should be shown in 3D-vewer: "don s c" and every p_* wire.

git

2014-12-22 19:21

administrator   ~0035577

Branch CR25531 has been updated by mkv.

SHA-1: 9278e47b121e3361ebe5750b5b30b5aada3adc2b


Detailed log of new commits:

Author: mkv
Date: Mon Dec 22 19:20:54 2014 +0300

    Correction of test cases for issue CR25531

mkv

2014-12-22 19:27

tester   ~0035578

Dear BugMaster,
Test cases bugs/modalg_1(006)/bug16517_1 and bugs/modalg_1(006)/bug16517_2 are corrected and pushed to branch CR25531.

Branch CR25531 is TESTED.

nbv

2014-12-23 10:09

developer   ~0035584

OK. Without any changes.

git

2015-01-26 12:34

administrator   ~0036555

Branch CR25531 has been deleted by inv.

SHA-1: 9278e47b121e3361ebe5750b5b30b5aada3adc2b

Related Changesets

occt: master 7c32c7c4

2014-12-25 15:04:55

nbv


Committer: bugmaster Details Diff
0025531: Difference in intersection result on Windows and Linux platform is very significant

1. Dump of WLine is shown with more precise.
2. Equation solving with more precise.
3. Dump of Multy-line.
4. Code optimization.

Some test cases were updated in accordance with their new behaviour.

Correction of test cases for issue CR25531
Affected Issues
0025531
mod - src/ApproxInt/ApproxInt_Approx.gxx Diff File
mod - src/ApproxInt/ApproxInt_MultiLine.cdl Diff File
mod - src/ApproxInt/ApproxInt_MultiLine.gxx Diff File
mod - src/ApproxInt/ApproxInt_MultiLineTool.cdl Diff File
mod - src/ApproxInt/ApproxInt_MultiLineTool.lxx Diff File
mod - src/IntPatch/IntPatch_ImpImpIntersection_4.gxx Diff File
mod - src/IntPatch/IntPatch_WLine.cxx Diff File
mod - tests/bugs/modalg_1/bug16517_1 Diff File
mod - tests/bugs/modalg_1/bug16517_2 Diff File
mod - tests/bugs/modalg_5/bug24915 Diff File
mod - tests/bugs/modalg_5/bug25292_15 Diff File
mod - tests/bugs/modalg_5/bug25292_16 Diff File
mod - tests/bugs/modalg_5/bug25292_25 Diff File
mod - tests/bugs/modalg_5/bug25292_26 Diff File
mod - tests/bugs/modalg_5/bug25292_31 Diff File
mod - tests/bugs/modalg_5/bug25292_32 Diff File
mod - tests/bugs/modalg_5/bug25292_35 Diff File
mod - tests/bugs/modalg_5/bug25292_36 Diff File
mod - tests/bugs/modalg_5/bug25488 Diff File

Issue History

Date Modified Username Field Change
2014-11-28 11:30 nbv New Issue
2014-11-28 11:30 nbv Assigned To => nbv
2014-12-10 11:29 git Note Added: 0035250
2014-12-10 12:42 git Note Added: 0035252
2014-12-10 13:49 git Note Added: 0035260
2014-12-10 16:53 git Note Added: 0035275
2014-12-11 10:28 git Note Added: 0035301
2014-12-12 09:56 nbv Status new => assigned
2014-12-12 11:38 git Note Added: 0035351
2014-12-12 16:13 git Note Added: 0035370
2014-12-12 17:09 nbv Note Added: 0035376
2014-12-12 17:09 nbv Assigned To nbv => ifv
2014-12-12 17:09 nbv Status assigned => resolved
2014-12-12 17:49 ifv Note Added: 0035377
2014-12-12 17:49 ifv Assigned To ifv => bugmaster
2014-12-12 17:49 ifv Status resolved => reviewed
2014-12-12 18:30 git Note Added: 0035379
2014-12-12 18:31 nbv Note Added: 0035380
2014-12-16 15:56 mkv Assigned To bugmaster => mkv
2014-12-16 16:38 git Note Added: 0035422
2014-12-22 15:08 mkv Note Added: 0035556
2014-12-22 15:09 mkv Note Added: 0035557
2014-12-22 15:10 mkv Test case number => bugs modalg_5(010) bug25292_32
2014-12-22 15:10 mkv Assigned To mkv => nbv
2014-12-22 15:10 mkv Status reviewed => feedback
2014-12-22 17:58 nbv Note Added: 0035567
2014-12-22 17:58 nbv Assigned To nbv => mkv
2014-12-22 18:16 nbv Note Edited: 0035567
2014-12-22 19:21 git Note Added: 0035577
2014-12-22 19:27 mkv Note Added: 0035578
2014-12-22 19:27 mkv Assigned To mkv => bugmaster
2014-12-22 19:27 mkv Status feedback => tested
2014-12-23 09:48 nbv Assigned To bugmaster => nbv
2014-12-23 09:48 nbv Status tested => feedback
2014-12-23 10:09 nbv Note Added: 0035584
2014-12-23 10:09 nbv Assigned To nbv => bugmaster
2014-12-23 10:09 nbv Status feedback => reviewed
2014-12-23 14:20 mkv Status reviewed => tested
2014-12-26 13:33 bugmaster Changeset attached => occt master 7c32c7c4
2014-12-26 13:33 bugmaster Status tested => verified
2014-12-26 13:33 bugmaster Resolution open => fixed
2015-01-19 16:23 bugmaster Target Version 7.0.0 => 6.9.0
2015-01-26 12:34 git Note Added: 0036555
2015-05-14 15:29 aiv Status verified => closed
2015-05-14 15:32 aiv Fixed in Version => 6.9.0